# hy

./: Makefile  README.md
.github/workflows/: ci.yml  sync-cookiecutter.yml  sync-copier.yml
cookiecutter/: README.md
cookiecutter-hy/: README.md
cookiecutter-hy/{{cookiecutter.project_slug}}/: pyproject.toml
cookiecutter-hy/{{cookiecutter.project_slug}}/tests/: conftest.py  test_main.hy
copier-hy/: README.md  README.md.jinja  copier.yml  pyproject.toml.jinja
copier-hy/tests/: conftest.py  test_main.hy.jinja
hatch/: README.md  pyproject.toml
hatch-hy/: README.md  pyproject.toml
hatch-hy/hatch_hy/: template.py
hatch-hy/hatch_hy/templates/: pyproject.toml  tests
hatch-hy/src/hatch_hy/: template.py
hatch-hy/src/hatch_hy/templates/: pyproject.toml  src  tests
hatch-hy/tests/: test_collect_files.hy  test_template.hy  test_template.py
hatch/src/hatch_hy/templates/: conftest.py  pyproject.toml
hatch/tests/: test_template.py
poetry/: pyproject.toml
poetry-hy/: README.md  pyproject.toml
poetry-hy/poetry_hy_plugin/templates/: LICENSE  hy_project  pyproject.toml
poetry-hy/src/poetry_hy_plugin/: plugin.py
poetry-hy/src/poetry_hy_plugin/templates/: LICENSE  hy_project  pyproject.toml
poetry-hy/tests/: conftest.py  test_copy_tree.hy  test_pypi_fetch.hy  test_scaffold.hy  test_scaffold.py
poetry/tests/: test_copy_tree.py  test_scaffold.py
pytest-hy/: README.md  pyproject.toml
pytest-hy/pytest_hy/: plugin.py
pytest-hy/tests/: test_plugin.hy
shared/templates/tests/: test_main.hy
src/poetry_hy_plugin/: plugin.py
src/poetry_hy_plugin/templates/: pyproject.toml
tests/: test_collect_files.py  test_pypi_fetch.py  test_scaffold.py
{{cookiecutter.project_slug}}/: pyproject.toml
