[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-hy"
version = "0.1.0"
description = "Hatch template plugin for Hy projects"
requires-python = ">= 3.9"
dependencies = ["hatch"]
license = {text = "MIT"}

[project.entry-points.hatch]
hatch-hy = "hatch_hy.hooks"

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_hy"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider", "--import-mode=importlib"]
norecursedirs = ["src"]
