[build-system]
requires = ["setuptools >= 61.0", "hy >= 1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
dependencies = ["hy >= 1.0"]
license = {text = "MIT"}
authors = [{name = "{{cookiecutter.author}}"}]

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.module_name}}.main:main"

[tool.setuptools.package-data]
"*" = ["*.hy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-hy"]

[tool.pytest.ini_options]
pythonpath = ["."]
