[build-system]
requires = ["setuptools >= 61.0", "hy >= 1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{project_name}"
version = "0.1.0"
description = "{description}"
dependencies = ["hy >= 1.0"]
license = {text = "MIT"}

[project.scripts]
{project_name} = "{module_name}.main:main"

[tool.setuptools.package-data]
"*" = ["*.hy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-hy"]

[tool.pytest.ini_options]
pythonpath = ["."]
