[build-system]
requires = ["setuptools >= 61.0", "hy >= 1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{project_name}"
version = "0.1.0"
description = "{description}"
dependencies = ["hy >= 1.0"]
license = {text = "MIT"}

[tool.setuptools.package-data]
"*" = ["*.hy"]

[tool.pytest.ini_options]
pythonpath = ["."]
